# picovoicerecon

./: README.md  hi.md
pico-code/i2s_audio_record/: CMakeLists.tct  CMakeLists.txt  glue.c  main.c  msc_device_disk.c  pico_audio_recorder.c  pico_audio_recorder.h  pico_audio_recorder.pio  spi_sdmmc.c
pico-code/ssd1306_i2c/: CMakeLists.txt  main.c  ssd1306_i2c.c
pico-code/ssd1306_i2c/drivers/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_def.h
